First landing page build

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,3 +3,18 @@ html,
 body {
 	@apply h-full;
 }
+
+@font-face {
+	font-family: 'IndieFlower';
+	src: url('/fonts/IndieFlower-Regular.ttf');
+}
+@font-face {
+	font-family: 'Nunito';
+	src: url('/fonts/Nunito-VariableFont_wght.ttf');
+}
+
+:root {
+	/* =~= Theme Properties =~= */
+	--theme-font-family-base: 'Nunito', system-ui;
+	--theme-font-family-heading: 'Nunito', system-ui;
+}
